--- a/static/scss/_partials/landscape-desktop/_landscape-desktop.scss
+++ b/static/scss/_partials/landscape-desktop/_landscape-desktop.scss
@@ -24,6 +24,11 @@
         padding-top: 8vw;
         padding-bottom: 2vw;
         width: 100%;
+        color: white;
+    }
+
+    .form-group {
+        color: white;
     }
 
     // footer {
