--- a/static/scss/_partials/portrait-mobile/pages/_cart-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_cart-page.scss
@@ -8,7 +8,7 @@
     font-size: 3vw;
 }
 
-.checkout-summary-wrapper {
+.cart-summary-wrapper {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -16,7 +16,7 @@
     padding-bottom: 4vw;
 }
 
-.checkout-summary {
+.cart-summary {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -27,7 +27,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-content: center;
+}
+
+.empty-cart-wrapper p {
+    font-size: 5.5vw;
+
 }
 
 .no-cart-items {
