--- a/static/scss/_partials/portrait-mobile/pages/_productdetails-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_productdetails-page.scss
@@ -13,6 +13,11 @@
     top: 16vw;
 }
 
+.revform > .input-group-btn {
+    text-align: center;
+    padding-left: 3px;
+}
+
 
 .add-wish-btn,
 .remove-wish-btn,
