--- a/static/scss/_partials/landscape-desktop/pages/_login-page.scss
+++ b/static/scss/_partials/landscape-desktop/pages/_login-page.scss
@@ -1,6 +1,8 @@
 .login-wrapper {
-    height: 70vh;
     align-content: center;
+    padding-bottom: 25vw;
+    background-color: #9e988fcb;
+    min-height: 85vh;
 }
 
 #loginform {
