--- a/static/scss/_partials/portrait-mobile/pages/_productdetails-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_productdetails-page.scss
@@ -9,13 +9,9 @@
 .revform {
     width: 8vw;
     position: absolute;
-    left: 70vw;
+    left: 69vw;
     top: 16vw;
-}
-
-.revform > .input-group-btn {
-    text-align: center;
-    padding-left: 3px;
+    margin-left: 3px;
 }
 
 
