--- a/static/scss/_partials/portrait-mobile/pages/_products-page.scss
+++ b/static/scss/_partials/portrait-mobile/pages/_products-page.scss
@@ -28,7 +28,6 @@
 .add-review-btn {
     font-size: 5.5vw;
     color: rgb(65, 106, 236);
-    padding: 0;
 }
 
 
@@ -58,10 +57,10 @@ h3 .product-headline {
 }
 
 .stats-value {
-    width: 52vw;;
+    width: 52vw;
+    ;
 }
 
 .stats-value a {
     text-decoration: none;
 }
-
